--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroui/react": "^2.7.4",
+    "framer-motion": "^12.4.7",
     "next": "15.2.0",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
